# levinthal

./: .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
crates/levinthal-cli/: Cargo.toml
crates/levinthal-cli/src/: commands.rs  main.rs
crates/levinthal-core/: Cargo.toml
crates/levinthal-core/src/: amino_acid.rs  error.rs  lib.rs  partition.rs  sentropy.rs  ternary.rs  trajectory.rs
crates/levinthal-folding/: Cargo.toml
crates/levinthal-folding/src/: coherence.rs  groel.rs  kuramoto.rs  lib.rs
crates/levinthal-msms/: Cargo.toml
crates/levinthal-msms/src/: fragment.rs  lib.rs  peptide.rs  spectrum.rs
docs/cellular/cellular-infrastructure/: complete-cell.out  complete-cell.tex
docs/cellular/multimodal-reaction-localization/: multimodal-reaction-localization.out
docs/chemistry/disease-state-equations/: disease-state-equations.out
docs/chemistry/resolution/: maxwell-demon-condensed.aux  maxwell-demon-condensed.out  maxwell-demon-condensed.tex  maxwell-paradox-arxiv.tex  references.bib  resolution-of-maxwell-demons.out
docs/chemistry/ternary-representation/: ternary-unit-representation.out
docs/instruments/emission-strobe/: emission-strobe-vibrational-spectroscopy.aux  emission-strobe-vibrational-spectroscopy.out  emission-strobe-vibrational-spectroscopy.tex  emission_strobe_device.py  references.bib
docs/instruments/instrument-derivation/: first-principles-origins-spectroscopy.out
docs/instruments/temporal/: categorical-scripting.tex  self-observation.tex  trajectory-computing.tex
docs/physics/bijective-proteomics/: bijective-proteomics.tex
docs/physics/electron-trajectory-charge-redistribution/: electron-trajectory-charge-redistribution.aux  electron-trajectory-charge-redistribution.bbl  electron-trajectory-charge-redistribution.blg  electron-trajectory-charge-redistribution.out  electron-trajectory-charge-redistribution.tex  electron-trajectory-charge-redistribution.toc  references.bib
docs/physics/lunar_surface_imaging/: figures.tex  lunar-surface-imaging-arxiv.tex  main.tex  references.bib
docs/physics/molecular-language/: categorical-amino-acid-molecular-language.aux  categorical-amino-acid-molecular-language.blg  categorical-amino-acid-molecular-language.out  categorical-amino-acid-molecular-language.tex  categorical-amino-acid-molecular-language.toc  references.bib
experiments/azurin-electron-transfer/: azurin-validation.aux  azurin-validation.out  azurin-validation.tex  azurin-validation.toc  run_experiment.py
experiments/cellular-self-observation/: run_all_experiments.py
experiments/first-principles-validation/: run_validation.py
experiments/protein-dynamics/: run_experiments.py
publication/atomic-spectrometers/: atomic-ternary-spectrometers.tex  references.bib
publication/catalysis/: superoxide-dismutase.aux  superoxide-dismutase.blg  superoxide-dismutase.out  superoxide-dismutase.tex
publication/protein-folding-trajectory/: generate_figures.py  protein-folding-trajectory.tex
(+104 files in other folders)
