[workspace]
resolver = "2"
members = [
    "crates/levinthal-core",
    "crates/levinthal-msms",
    "crates/levinthal-folding",
    "crates/levinthal-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Kundai Farai Sachikonye <kundai.sachikonye@wzw.tum.de>"]
license = "MIT"
repository = "https://github.com/kundai-sachikonye/levinthal"
description = "Protein folding as trajectory completion through categorical state navigation"

[workspace.dependencies]
# Core dependencies
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Math and numerics
nalgebra = "0.32"
ndarray = "0.15"
num-traits = "0.2"
num-complex = "0.4"
rand = "0.8"
rand_distr = "0.4"

# Parallel computation
rayon = "1.8"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
approx = "0.5"
