[package]
name = "levinthal-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core primitives for the Levinthal protein folding framework"

[dependencies]
thiserror.workspace = true
serde.workspace = true
num-traits.workspace = true
num-complex.workspace = true
nalgebra.workspace = true
rand.workspace = true

[dev-dependencies]
approx.workspace = true
