[package]
name = "levinthal-folding"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Phase-lock dynamics and Kuramoto oscillators for protein folding"

[dependencies]
levinthal-core = { path = "../levinthal-core" }
thiserror.workspace = true
serde.workspace = true
num-traits.workspace = true
num-complex.workspace = true
nalgebra.workspace = true
rand.workspace = true

[dev-dependencies]
approx.workspace = true
